# camera_aravis

./: CMakeLists.txt
cfg/: CameraAravis.cfg
src/: camnode.cpp
